test/langtools/tools/javac/valhalla/lworld-values/RefDefault/CheckCyclicMembership.out
CheckCyclicMembership.java:13:41: compiler.err.cyclic.primitive.class.membership: CheckCyclicMembership.InnerValue
CheckCyclicMembership.java:15:37: compiler.err.cyclic.primitive.class.membership: CheckCyclicMembership
CheckCyclicMembership.java:19:26: compiler.err.cyclic.primitive.class.membership: CheckCyclicMembership
3 errors
